@@ -4,11 +4,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import io.github.rehody.abplatform.enums.ExperimentState;
+import io.github.rehody.abplatform.enums.ExperimentVariantType;
+import io.github.rehody.abplatform.model.ExperimentRolloutPlan;
 import io.github.rehody.abplatform.model.ExperimentVariant;
 import io.github.rehody.abplatform.model.FeatureValue;
 import io.github.rehody.abplatform.model.FeatureValue.FeatureValueType;
 import io.github.rehody.abplatform.util.cache.ObjectMapperCacheCodec;
-import java.math.BigDecimal;
+import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
@@ -24,19 +26,26 @@ class ExperimentCacheCodecTest {
         CachedExperiment cachedExperiment = new CachedExperiment(
                 UUID.fromString("00000000-0000-0000-0000-000000000001"),
                 "flag-a",
+                "CHECKOUT",
+                ExperimentRolloutPlan.initial(),
                 List.of(new ExperimentVariant(
                         UUID.fromString("11111111-1111-1111-1111-111111111111"),
                         "control",
                         new FeatureValue(true, FeatureValueType.BOOL),
                         0,
-                        BigDecimal.ONE)),
+                        null,
+                        ExperimentVariantType.CONTROL)),
                 ExperimentState.RUNNING,
-                6L);
+                6L,
+                Instant.parse("2026-03-30T10:15:30Z"),
+                null);
 
         String json = codec.write(cachedExperiment);
 
         assertThat(json).contains("\"id\":\"00000000-0000-0000-0000-000000000001\"");
         assertThat(json).contains("\"flagKey\":\"flag-a\"");
+        assertThat(json).contains("\"domainKey\":\"CHECKOUT\"");
+        assertThat(json).contains("\"regularRolloutPercentage\":5");
         assertThat(json).contains("\"key\":\"control\"");
         assertThat(json).contains("\"type\":\"BOOL\"");
         assertThat(json).contains("\"version\":6");
@@ -45,17 +54,21 @@ class ExperimentCacheCodecTest {
     @Test
     void read_shouldDeserializeResponseAndRestoreFields() {
         String json = """
-                {"id":"00000000-0000-0000-0000-000000000001","flagKey":"flag-b","variants":[{"id":"11111111-1111-1111-1111-111111111111","key":"variant-a","value":{"value":123,"type":"NUMBER"},"position":1}],"state":"APPROVED","version":4}
+                {"id":"00000000-0000-0000-0000-000000000001","flagKey":"flag-b","domainKey":"CHECKOUT","rolloutPlan":{"regularRolloutPercentage":5,"afterRollback":false,"stillNegativeAfterRollback":false},"variants":[{"id":"11111111-1111-1111-1111-111111111111","key":"variant-a","value":{"value":123,"type":"NUMBER"},"position":1,"weight":2,"type":"REGULAR"}],"state":"APPROVED","version":4,"startedAt":null,"completedAt":null}
                 """;
 
         CachedExperiment cachedExperiment = codec.read(json);
 
         assertThat(cachedExperiment.id()).isEqualTo(UUID.fromString("00000000-0000-0000-0000-000000000001"));
         assertThat(cachedExperiment.flagKey()).isEqualTo("flag-b");
+        assertThat(cachedExperiment.domainKey()).isEqualTo("CHECKOUT");
+        assertThat(cachedExperiment.rolloutPlan()).isEqualTo(ExperimentRolloutPlan.initial());
         assertThat(cachedExperiment.variants()).hasSize(1);
-        assertThat(cachedExperiment.variants().get(0).key()).isEqualTo("variant-a");
-        assertThat(cachedExperiment.variants().get(0).value().value()).isEqualTo(123);
-        assertThat(cachedExperiment.variants().get(0).value().type()).isEqualTo(FeatureValueType.NUMBER);
+        assertThat(cachedExperiment.variants().getFirst().key()).isEqualTo("variant-a");
+        assertThat(cachedExperiment.variants().getFirst().value().value()).isEqualTo(123);
+        assertThat(cachedExperiment.variants().getFirst().value().type()).isEqualTo(FeatureValueType.NUMBER);
+        assertThat(cachedExperiment.variants().getFirst().weight()).isEqualByComparingTo("2");
+        assertThat(cachedExperiment.variants().getFirst().type()).isEqualTo(ExperimentVariantType.REGULAR);
         assertThat(cachedExperiment.state()).isEqualTo(ExperimentState.APPROVED);
         assertThat(cachedExperiment.version()).isEqualTo(4L);
     }
